--- a/app/src/main/res/layout/activity_user_followers.xml
+++ b/app/src/main/res/layout/activity_user_followers.xml
@@ -96,7 +96,8 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:max="100"/>
         </LinearLayout>
 
         <LinearLayout
